# ai_poduct_matching

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  project.toml  pyproject.toml  test_mongo.py
app/: demo_gradio.py  ui.py
docker/: Dockerfile
mongo_store/: __init__.py  database.py
sample_data/: combined_embeddings.npy  products.json  text_only_embeddings.npy
scripts/: export_clip_onnx.py  infer_clip.py  infer_text.py  insert_products_to_mongo.py  load_embeddings.py  quantize_tensorrt.py  start_pipeline.py
triton_clients/: clip_image_embedder.py  clip_text_embedder.py
triton_models/: config.pbtxt
triton_models/clip_text/1/: config.pbtxt
utils/: embedding_utils.py  logger.py  triton_client.py
vector_db/: combined_index.faiss  engine.py  product_index.faiss  products.json  text_only_index.faiss
