[tool.poetry]
name = "ai-product-matching"
version = "0.1.0"
description = "Image-to-product matching pipeline using VLMs, Vector DBs, MongoDB, and Triton"
authors = ["Saran Jaya Thilak <saranjthilak@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "^0.110"
pymongo = "^4.13"
numpy = "^1.24"
faiss-cpu = "1.7.4"  # pin exact stable release
tritonclient = {version = "^2.59.0", extras = ["grpc"]}
gradio = "^4.25"
transformers = "^4.41.0"
python-dotenv = "^1.1.1"
pillow = "10.3.0"
requests = "^2.32.4"
sentence-transformers = "^2.2.2"  # lighter version, check if compatible
clip = {git = "https://github.com/openai/CLIP.git", rev = "v1.0"} # pin a tag if possible
onnx = "^1.18.0"

# Optional TensorRT for acceleration
tensorrt = {version = "==8.5.3.1", optional = true}

[tool.poetry.extras]
tensorrt = ["tensorrt"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
